Update .gitignore to exclude Android/iOS generated files

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+.build/
 
 # Symbolication related
 app.*.symbols
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Exclude Android and iOS generated files from language detection
+/android/** linguist-vendored
+/ios/** linguist-vendored
+/build/** linguist-vendored
